--- a/angular/src/main/java/angular-tutorial/src/app/app.component.html
+++ b/angular/src/main/java/angular-tutorial/src/app/app.component.html
@@ -1,18 +1,11 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<h1>{{title}}</h1>
 
-<nav>
-  <a routerLink="/dashboard">Dashboard</a>
-  <a routerLink="/heroes">Heroes</a>
-</nav>
-<!--router-outlet - where to diplay route-->
-<router-outlet></router-outlet>
-<app-messages></app-messages>
+<app-menu></app-menu>
+
+<!--<nav>-->
+<!--  <a routerLink="/dashboard">Dashboard</a>-->
+<!--  <a routerLink="/heroes">Heroes</a>-->
+<!--</nav>-->
+<!--&lt;!&ndash;router-outlet - where to diplay route&ndash;&gt;-->
+<!--<router-outlet></router-outlet>-->
+<!--<app-messages></app-messages>-->
