--- a/angular/src/main/java/angular-tutorial/src/styles.css
+++ b/angular/src/main/java/angular-tutorial/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+body{
+  margin: 0;
+}
+
 h1{
   color: #369;
   font-family: Arial;
@@ -9,15 +13,6 @@ h2, h3{
   color: #444;
   font-family: Arial;
   font-weight: lighter;
-}
-
-body{
-  margin: 5em;
-}
-
-body, input[type="text"], button{
-  color: #333;
-  font-family: Cambria, Georgia;
 }
 
 /*other places*/
