--- a/angular/src/main/java/angular-tutorial/src/styles.css
+++ b/angular/src/main/java/angular-tutorial/src/styles.css
@@ -5,13 +5,13 @@ body{
 
 h1{
   color: #369;
-  font-family: Arial;
+  font-family: Arial, serif;
   font-size: 250%;
 }
 
 h2, h3{
   color: #444;
-  font-family: Arial;
+  font-family: Arial, serif;
   font-weight: lighter;
 }
 
@@ -19,3 +19,6 @@ h2, h3{
 {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
