angular_notes - finished introduction. adding firts backend methods

--- a/angular/src/main/java/angular-tutorial/src/app/notatki/components/introduction/new-note-dialog/new-note-dialog.component.html
+++ b/angular/src/main/java/angular-tutorial/src/app/notatki/components/introduction/new-note-dialog/new-note-dialog.component.html
@@ -22,7 +22,8 @@
 
     <mat-form-field>
       <label>
-        <input matInput placeholder="Note text" formControlName="noteText" required>
+        <textarea matInput placeholder="Note text" formControlName="noteText" required></textarea>
+        <!--        <input matInput placeholder="Note text" formControlName="noteText" required>-->
       </label>
     </mat-form-field>
     <div mat-dialog-actions class="note-dialog-buttons">
