--- a/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.css
+++ b/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.css
@@ -53,3 +53,13 @@ mat-drawer-content {
   width: 100%;
   height: 100%;
 }
+
+mat-icon{
+  display: block;
+  margin: auto;
+}
+.introduction-link{
+  height: 48px;
+  align-items: center;
+  margin-left: 25px;
+}
