angular_notes - woriking seving new notes and getting notes info

--- a/angular/src/main/java/angular-tutorial/src/app/notatki/components/introduction/new-note-dialog/new-note-dialog.component.html
+++ b/angular/src/main/java/angular-tutorial/src/app/notatki/components/introduction/new-note-dialog/new-note-dialog.component.html
@@ -16,7 +16,7 @@
 
     <mat-form-field>
       <label>
-        <input matInput placeholder="Note topic" formControlName="noteTopik" required>
+        <input matInput placeholder="Note topic" formControlName="noteTopic" required>
       </label>
     </mat-form-field>
 
