--- a/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.css
+++ b/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.css
@@ -1,4 +1,4 @@
-mat-toolbar-row{
+mat-toolbar-row {
   height: 64px;
   width: 100%;
   display: flex;
@@ -7,23 +7,23 @@ mat-toolbar-row{
   background-color: #1976d2;
 }
 
-.mat-button{
+.mat-button {
   background-color: Transparent;
-  background-repeat:no-repeat;
+  background-repeat: no-repeat;
   border: none;
-  cursor:pointer;
+  cursor: pointer;
   overflow: hidden;
-  outline:none;
+  outline: none;
   color: white;
   height: 100%;
   min-width: 64px;
 }
 
-.mat-button:hover{
+.mat-button:hover {
   background-color: #336699;
 }
 
-ul li{
+ul li {
   list-style: none;
   color: white;
   height: 64px;
@@ -34,11 +34,12 @@ ul li{
   margin-right: 10px;
 }
 
-li a{
+li a {
   cursor: pointer;
   font-family: sans-serif;
 }
-li a:hover{
+
+li a:hover {
   color: #aaaaaa;
 }
 
@@ -49,17 +50,68 @@ mat-drawer-content {
   align-items: flex-start;
 }
 
-.side-nav-container{
+mat-drawer-container {
+  height: 100%;
+}
+
+.side-nav-container {
   width: 100%;
   height: 100%;
 }
 
-mat-icon{
+mat-icon {
   display: block;
   margin: auto;
 }
-.introduction-link{
+
+.introduction-link {
   height: 48px;
   align-items: center;
-  margin-left: 25px;
+  margin: 0;
 }
+
+mat-drawer {
+  width: 15%;
+}
+
+mat-panel-description.introduction-link:hover {
+  background-color: #dbdbdb;
+  color: #039be5;
+}
+
+mat-expansion-panel-header.expansion-header:hover {
+  background-color: #dbdbdb !important;
+  color: #039be5;
+}
+
+mat-expansion-panel-header.expansion-header:hover mat-panel-description {
+  background-color: #dbdbdb !important;
+  color: #039be5;
+}
+
+::ng-deep .mat-expansion-panel-body {
+  margin: 0;
+  padding: 0 !important;
+}
+
+mat-nav-list a {
+  padding-left: 20px;
+}
+
+mat-nav-list a:hover {
+  background-color: #dbdbdb;
+  color: #039be5;
+}
+
+.mat-list-base .mat-list-item{
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  color: lightslategray;
+}
+.mat-list-base .mat-list-item:hover{
+  color: #039be5;
+}
+
+
+
