--- a/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.html
+++ b/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.html
@@ -29,26 +29,26 @@
     </ul>
   </mat-toolbar-row>
 </mat-toolbar>
-<mat-drawer-container class="example-container" style="height: 500px"> <!-- REMEBER to remove this fixed style -->
+<mat-drawer-container class="example-container"> <!-- REMEBER to remove this fixed style -->
   <mat-drawer mode="side" #drawer>
     <div class="side-nav-container">
       <mat-panel-description class="introduction-link">
-        <mat-panel-description>
+        <mat-nav-list>
           <a routerLink="/intro"> Introduction </a>
-        </mat-panel-description>
+        </mat-nav-list>
       </mat-panel-description>
       <mat-expansion-panel>
-        <mat-expansion-panel-header>
+        <mat-expansion-panel-header class="expansion-header">
           <mat-panel-description>
             HIBERNATE
           </mat-panel-description>
         </mat-expansion-panel-header>
         <mat-nav-list>
-          <a mat-list-item href="" *ngFor="let link of getHibernateNotes()" > {{ link.noteTopic }} </a>
+          <a mat-list-item href="" *ngFor="let link of getHibernateNotes()"> {{ link.noteTopic }} </a>
         </mat-nav-list>
       </mat-expansion-panel>
       <mat-expansion-panel>
-        <mat-expansion-panel-header>
+        <mat-expansion-panel-header class="expansion-header">
           <mat-panel-description>
             SPRING
           </mat-panel-description>
@@ -58,7 +58,7 @@
         </mat-nav-list>
       </mat-expansion-panel>
       <mat-expansion-panel>
-        <mat-expansion-panel-header >
+        <mat-expansion-panel-header class="expansion-header">
           <mat-panel-description>
             ANGULAR
           </mat-panel-description>
