--- a/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.html
+++ b/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.html
@@ -44,7 +44,7 @@
           </mat-panel-description>
         </mat-expansion-panel-header>
         <mat-nav-list>
-          <a mat-list-item href="" *ngFor="let link of getHibernateNotes()"> {{ link.noteTopic }} </a>
+          <a mat-list-item routerLink="/note/{{link.id}}" *ngFor="let link of getHibernateNotes()"> {{ link.noteTopic }} </a>
         </mat-nav-list>
       </mat-expansion-panel>
       <mat-expansion-panel>
@@ -54,7 +54,7 @@
           </mat-panel-description>
         </mat-expansion-panel-header>
         <mat-nav-list>
-          <a mat-list-item href="" *ngFor="let link of getSpringNotes()"> {{ link.noteTopic }} </a>
+          <a mat-list-item routerLink="/note/{{link.id}}" *ngFor="let link of getSpringNotes()"> {{ link.noteTopic }} </a>
         </mat-nav-list>
       </mat-expansion-panel>
       <mat-expansion-panel>
@@ -64,14 +64,13 @@
           </mat-panel-description>
         </mat-expansion-panel-header>
         <mat-nav-list>
-          <a mat-list-item href="" *ngFor="let link of getAngularNotes()"> {{ link.noteTopic }} </a>
+          <a mat-list-item routerLink="/note/{{link.id}}" *ngFor="let link of getAngularNotes()"> {{ link.noteTopic }} </a>
         </mat-nav-list>
       </mat-expansion-panel>
     </div>
   </mat-drawer>
   <mat-drawer-content>
-    <app-introduction (newNote)="onNewNote($event)"></app-introduction>
-
+    <router-outlet></router-outlet>
   </mat-drawer-content>
 </mat-drawer-container>
 
