--- a/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.css
+++ b/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.css
@@ -44,7 +44,7 @@ li a:hover {
 }
 
 mat-drawer-content {
-  padding: 12px;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -52,6 +52,7 @@ mat-drawer-content {
 
 mat-drawer-container {
   height: 100%;
+  width: 100%;
 }
 
 .side-nav-container {
