spring security working basic auth todo: login form and redirection

--- a/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.css
+++ b/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.css
@@ -114,5 +114,14 @@ mat-nav-list a:hover {
   color: #039be5;
 }
 
+.bar-links{
+  color: white;
+  text-decoration: none;
+}
+
+.bar-links:hover{
+  color: #aaaaaa;
+}
+
 
 
