--- a/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.html
+++ b/angular/src/main/java/angular-tutorial/src/app/notatki/components/menu.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <button class="mat-button" (click)="drawer.toggle()">
+    <button class="mat-button" (click)="drawer.toggle()" #sideMenuButton>
       <span>
         <mat-icon role="img" aria-hidden="true">
           <svg focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -12,24 +12,24 @@
     <img src="../../../assets/logo.png" title="logo" width="150" height="40" alt="logo" style="margin-left: 10px;">
     <ul>
       <li>
-        <a>
+        <a class="bar-links" routerLink="/intro" (click)="sideMenuButton.hidden = false">
           <span>NOTES</span>
         </a>
       </li>
       <li>
-        <a>
-          <span>NOTHING YET</span>
+        <a class="bar-links" routerLink="/security" (click)="drawer.close(); sideMenuButton.hidden = true">
+          <span>SECURITY</span>
         </a>
       </li>
       <li>
-        <a>
+        <a class="bar-links">
           <span>NOTHING YET</span>
         </a>
       </li>
     </ul>
   </mat-toolbar-row>
 </mat-toolbar>
-<mat-drawer-container class="example-container"> <!-- REMEBER to remove this fixed style -->
+<mat-drawer-container class="example-container">
   <mat-drawer mode="side" #drawer>
     <div class="side-nav-container">
       <mat-panel-description class="introduction-link">
